<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_action_star_0"
        android:showAsAction="ifRoom"
        android:title="@string/star">
    </item>
    <item
        android:id="@+id/action_reservation"
        android:showAsAction="ifRoom|withText"
        android:title="@string/reserve">
    </item>
    <item
        android:id="@+id/action_lendebook"
        android:showAsAction="ifRoom|withText"
        android:title="@string/lendebook">
    </item>
    <item
        android:id="@+id/action_export"
        android:showAsAction="never"
        android:title="@string/export">
    </item>

</menu>