<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/about" >
        <Preference
            android:key="version"
            android:summary="@string/about_summary"
            android:title="Version" />
        <Preference
            android:key="changelog"
            android:title="@string/changelog" />
        <Preference
            android:key="website"
            android:summary="www.opacapp.de"
            android:title="Website" />
        <Preference
            android:key="developer"
            android:summary="Raphael Michel · www.raphaelmichel.de"
            android:title="Entwickler" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Feedback" >
        <Preference
            android:key="feedback"
            android:summary="info@opacapp.de"
            android:title="Feedback" />
        <Preference
            android:key="rate_play"
            android:summary="Google Play"
            android:title="Applikation bewerten" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Sonstiges" >
        <Preference
            android:key="thanks"
            android:title="@string/thanks" />
        <Preference
            android:key="privacy"
            android:title="@string/privacy" />
        <Preference
            android:key="source"
            android:summary="github.com/raphaelm/opacclient"
            android:title="Source Code" />
        <Preference
            android:key="osl"
            android:title="@string/osl" />
    </PreferenceCategory>

</PreferenceScreen>