<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/svAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tlMedien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </TableLayout>
        <Button
            android:id="@+id/btExtendall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extendall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservations"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        <TableLayout
            android:id="@+id/tlReservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

</LinearLayout>

    </ScrollView>
